# detectors

./: .gitignore  Makefile  README.md  TODO.txt  pyproject.toml  requirements.txt  temp.csv
configs/: inference-rtdetrv2-onnx.yaml  inference-rtdetrv2-torch.yaml  inference-rtdetrv2.yaml  test-coco-config.yaml  test-coco-dino-rn50.yaml  train-coco-default.yaml  train-coco-dino-rn.yaml  train-coco-dino-rn50.yaml  train-coco-dino.yaml  train-coco-rt-detr-rn50.yaml
configs/datasets/: coco-2017.yaml
configs/dino/: dino-base.yaml  dino-rn50.yaml
configs/rt-detrv2/: rtdetrv2-rn50-model.yaml  solver.yaml
configs/yolov3/: model-dn53.yaml  model-rn50.yaml
configs/yolov4/: model-base.yaml
detectors/: evaluate.py  inference.py  metrics.py  trainer.py  visualize.py  vocab.py
detectors/data/: __init__.py  coco.py  coco_ds.py  coco_eval.py  coco_minitrain.py  coco_utils.py  collate.py  collate_functions.py  create.py  data.py  transforms.py
detectors/losses/: __init__.py  create.py  dino_loss.py  rtdetrv2_loss.py  yolov3_loss.py  yolov4_loss.py
detectors/models/: README.md  __init__.py  attention.py  create.py  darknet.py  dino.py  rtdetrv2.py  yolov3.py  yolov4.py  yolov4_pytorch.py
detectors/postprocessing/: eval.py  nms.py  postprocess.py
detectors/solvers/: __init__.py  build.py  config.py  ema_model.py  schedulers.py
detectors/utils/: box_ops.py  config.py  display.py  distributed.py  eval.py  learning.py  logger.py  misc.py  plots.py  registry.py  reproduce.py  schedulers.py  script.py  utils.py
scripts/: inference.py  test.py  testing.py  train.py
(+54 files in other folders)
