[tool.poetry]
# $ pip install pytemplate
name = "detectors"
version = "0.0.1"
description = "A modular framework for object detectors, mostly for my own understanding."
authors = ["Bradley Selee"]
license = "LICENSE.txt"

[tool.isort]
profile = "black" # prevents isort from reformatting black

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
[tool.poetry.dependencies]
albumentations = "*"
matplotlib = "*"
onnx = "*"
onnxruntime = "*"
python = ">=3.9"
pytest = "*"
pyyaml = "*"
fire = "*"
torch = "*"
torchvision = "*"
tqdm = "*"
pandas = "*"
pycocotools = "*"

# Linters/formatters
mypy = "*"
pylint = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"